# src/api/routers/category.router.ts
@@ -1,17 +1,20 @@
 import { Router } from "express";
 import { catchError } from "../core/catchError";
-import { verifyToken, authorizePermissions } from "../middlewares/auth.middleware";
+import {
+  verifyToken,
+  authorizePermissions,
+} from "../middlewares/auth.middleware";
 import categoryController from "../controllers/category.controller";
 const categoryRouter = Router();
 
 categoryRouter
-  .route("/")
+  .route("/create")
   .post(
     verifyToken,
     authorizePermissions("admin"),
     catchError(categoryController.createCategory)
-  )
-  .get(catchError(categoryController.getAllCategories));
+  );
+categoryRouter.route("/").get(catchError(categoryController.getAllCategories));
 
 categoryRouter
   .route("/:cateId")
