# src/swagger/rule.json
@@ -1,108 +1,139 @@
 {
-    "openapi": "3.0.3",
-    "info": {
-      "version": "1.0",
-      "title": "Coffee Shop Management System Api's"
-    },
-    "servers": [
-      {
-        "url": "http://localhost:8080/api/v1"
+  "openapi": "3.0.3",
+  "info": {
+    "version": "1.0",
+    "title": "Coffee Shop Management System Api's"
+  },
+  "servers": [
+    {
+      "url": "http://localhost:8080/api/v1"
+    }
+  ],
+  "components": {
+    "securitySchemes": {
+      "bearerAuth": {
+        "type": "http",
+        "scheme": "bearer",
+        "bearerFormat": "JWT"
       }
-    ],
-    "components": {
-      "securitySchemes": {
-        "bearerAuth": {
-          "type": "http",
-          "scheme": "bearer",
-          "bearerFormat": "JWT"
-        }
+    }
+  },
+  "paths": {
+    "/": {
+      "get": {
+        "tags": ["Health"],
+        "summary": "Health CheckUp",
+        "description": "health CheckUp",
+        "responses": {}
       }
     },
-    "paths": {
-      "/": {
-        "get": {
-          "tags": ["Authentication"],
-          "summary": "Health CheckUp",
-          "description": "User Registrations",
-          "responses": {}
-        }
-      },
-      "/register": {
-        "post": {
-          "tags": ["Authentication"],
-          "summary": "User Authentication",
-          "description": "User Registrations",
-          "security": [
-            {
-              "bearerAuth": []
-            }
-          ],
-          "requestBody": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/definitions/register"
-                }
+    "/admin": {
+      "get": {
+        "tags": ["Authentication"],
+        "summary": "Admin Register",
+        "description": "Admin Register",
+        "responses": {}
+      }
+    },
+    "/admin/login": {
+      "post": {
+        "tags": ["Authentication"],
+        "summary": "Admin Login",
+        "description": "Admin Login",
+        "requestBody": {
+          "description": "",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/definitions/login"
               }
             }
-          },
-          "responses": {}
-        }
-      },
-      "/login": {
-        "post": {
-          "tags": ["Authentication"],
-          "summary": "User Authentication",
-          "description": "User Registrations",
-          "security": [
-            {
-              "bearerAuth": []
-            }
-          ],
-          "requestBody": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/definitions/register"
-                }
-              }
-            }
-          },
-          "responses": {}
-        }
-      },
-  
-      "/fetch-user": {
-        "get": {
-          "tags": ["Authentication"],
-          "summary": "User Authentication",
-          "description": "User Registrations",
-          "parameters": [
-            {
-              "name": "user_id",
-              "in": "query",
-              "description": "fetch ekyc results from ekyc portal",
-              "required": true,
-              "type": "number"
-            }
-          ],
-          "responses": {}
-        }
+          }
+        },
+        "responses": {}
       }
     },
-    "definitions": {
-      "register": {
-        "type": "object",
-        "properties": {
-          "firstName": { "type": "string", "example": "usman" },
-          "lastName": { "type": "string", "example": "pasha" },
-          "email": { "type": "string", "example": "test@gmail.com" },
-          "phoneNumber": { "type": "string", "example": "9738286574" },
-          "password": { "type": "string", "example": "usman" }
-        }
+    "/admin/profile": {
+      "get": {
+        "tags": ["Authentication"],
+        "summary": "admin Profile",
+        "description": "admin Profile",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {}
+      }
+    },
+
+    "/category/create": {
+      "post": {
+        "tags": ["Category"],
+        "summary": "Create Category",
+        "description": "Create Category",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "description": "",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/definitions/cate-create"
+              }
+            }
+          }
+        },
+        "responses": {}
+      }
+    },
+    "/category": {
+      "get": {
+        "tags": ["Category"],
+        "summary": "Get All Categories",
+        "description": "Get All Categories",
+        "responses": {}
+      }
+    },
+    "/category/{cateId}": {
+      "get": {
+        "tags": ["Category"],
+        "summary": "Get Single Category",
+        "description": "Get Single Category",
+        "parameters": [
+          {
+            "name": "cateId",
+            "in": "path",
+            "description": "Category ID",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {}
+      }
+    }
+  },
+
+  "definitions": {
+    "login": {
+      "type": "object",
+      "properties": {
+        "email": { "type": "string", "example": "admin@yahoo.com" },
+        "phone": { "type": "string", "example": "9738286574" },
+        "password": { "type": "string", "example": "admin@Rest01" }
+      }
+    },
+    "cate-create": {
+      "type": "object",
+      "properties": {
+        "categoryName": { "type": "string", "example": "Coffee" },
+        "description": { "type": "string", "example": "coffee is good" }
       }
     }
   }
-  
+}
